# EpiAI

./: .gitignore  .pre-commit-config.yaml  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  Dengue-01-Train-Test-lossfn.ipynb  Dengue-01-Train.ipynb  Dengue-02-Viz-wordmap.ipynb  Dengue-02-Viz.ipynb  Dengue.feather  Example-01-one-city-model.ipynb  LICENSE  READMD.md  README.md  _fix.py  pyproject.toml
.github/workflows/: pytest.yml
data/: Align_data_tensor_with_name.pt  Infective_disease_china-V3.csv
docs/: EpiAI_Overview.pptx  api-deployment.md  architecture-v3.md  architecture.md  data-pipeline-v2.md  data-pipeline.md  deployment-design.md  deployment-web-api.md  deployment_runtime.md  index.md  quickstart.md  tutorial-dengue.ipynb  tutorial-dengue.md  tutorial-full.md  tutorial-generalization.md  tutorial-multifeat.md
docs/archive/: deployment-example.md  tutorial-dengue.md  tutorial-full.md
docs/guides/: dataset.md  deployment.md  models.md  risk.md  training.md
src/EpiAI/: __init__.py  inference.py  losses.py  time_serie_task.py  train.py  trainer.py  utils.py  虫媒-P4.1-AlignData.ipynb
src/EpiAI/dataset/: __init__.py  base.py  builder.py  config.py  container.py  containers.py  datamodule.py  inspector.py  io.py  loaders.py  normalizer.py  pipeline.py  splits.py  splitter.py  task_builder.py  time_seris_task_data.py  transforms.py  type_defs.py  utils.py  windowing.py
src/EpiAI/layers/: SelfAttention_Family.py
src/EpiAI/layers/utils/: __init__.py
src/EpiAI/models/: __init__.py  base.py  registry.py
src/EpiAI/models/sklearn_models/: RF.py  __init__.py  glm.py  lgbm.py  svm.py  tabpfn.py  xgb.py
src/EpiAI/models/tabular_models/: RF.py  __init__.py  glm.py  lgbm.py  svm.py  tabpfn.py  xgb.py
src/EpiAI/models/torch_models/: Autoformer.py  Pyraformer.py  TimesNet.py  VARMAX.py  __init__.py  cnn.py  cnn_lstm.py  dlinear.py  lstm.py  mlp.py  nbeats.py  resnet.py  tcn.py  transformer.py
src/EpiAI/models/ts_models/: ARIMA.py  EST.py  ETS.py  __init__.py  bsts.py  prophet.py  serfling.py  stlm.py
src/EpiAI/models/ts_models/arima_models/: __init__.py.bak
src/EpiAI/risk/: __init__.py  rules.py  scorer.py
tests/: test_phase1_core.py  test_phase2_loaders.py  test_phase5_pipeline.py  test_phase6_integration.py  test_phase7_integration_full.py
tests/test_dataset/: test_splits.py  test_transforms.py
tutorial/: tutorial-dengue-1.ipynb  tutorial-dengue.ipynb  tutorial-full.ipynb  tutorial-generalization.ipynb  tutorial-multifeat.ipynb
