[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "EpiAI"
version = "0.1.0"
description = "End-to-end infectious disease outbreak forecasting framework with deep learning and tabular models"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Tingfeng Xu", email = "xutingfeng@big.ac.cn" }
]
requires-python = ">=3.10"
keywords = [
  "epidemiology",
  "forecasting",
  "time-series",
  "deep-learning",
  "pytorch",
  "outbreak-prediction",
  "infectious-disease"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "torch-geometric",
  "epilearn",
  "Eir",
  "epydemix",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.0",
  "pre-commit>=3.0",
]
lgbm = ["lightgbm>=4.0"]
xgb = ["xgboost>=2.0"]
all = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
  "tabpfn>=0.1",
  "ray[tune]>=2.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/EpiAI"
Documentation = "https://epi-ai.readthedocs.io"
Repository = "https://github.com/your-repo/EpiAI"
Issues = "https://github.com/your-repo/EpiAI/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
